--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,6 @@
 name = "timecutrust"
 version = "0.1.0"
 authors = ["Vladimir Shakhov <vshakhov@yandex-team.ru>"]
+
+[dependencies]
+regex = "0.1.8"
